# SysP

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  sp
build_check/: CMakeCache.txt  Makefile  cmake_install.cmake
compiler/: CMakeLists.txt
compiler/scripts/: build.sh  check_project.sh  sysp_inspector.sh
docs/: language_spec.md  metatron_design.md
docs/spec/: sysp_grammar.ebnf
examples/: erro.sysp  hello.sp  hello.syp  math.sp  math.syp  ok.sysp  test.sp
language/docs/: LANGUAGE.md  compiler_architecture.md
language/examples/: calculadora.asm  calculadora.sp  erro.asm  erro.sp  expr.asm  expr.sp  forma.asm  forma.sp  hello.asm  lista.asm  lista.sp  math.asm  ok.asm  ok.sp  pessoa.asm  pessoa.sp  ponto.asm  ponto.sp  resultado.asm  resultado.sp  test.asm  vars.asm  vars.sp
language/livros/: 0321623215.txt  127 - Redes de Computadores e a Internet - Uma abordagem Top  Down.txt  2008_Book_TheAlgorithmDesignManual.txt  2021_Book_HighPerformanceComputing.txt  202512 - OWASP Top 10 2025 by Miglen Evlogiev.txt  4_5879807870286957058.txt  65407141-Calculo-Analise-de-estruturas.txt  9780321968975.txt  ABNT 6118 -Projeto de estruturas de concreto -procedimento.txt  ANALISE_MATEMATICA_PARA_ENGENHARIA_I_CCE.txt  API_RDC.txt  Advanced Compiler Design and Implementation.txt  Advanced.Programming.in.the.UNIX.Environment.3rd.Edition.0321637739.txt  Aho - Compilers - Principles, Techniques, and Tools 2e (1).txt  Aprendendo a programar na Linguagem C.txt  (+90 more)
scripts/: audit_architecture.sh  sysp_audit.sh  sysp_ebnf_check.sh  sysp_grammar_audit.sh
tests/: run_tests.sh
(+228 files in other folders)
